<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Compras</string>
    <string name="Botao_adicionar_nova_lista">Botão adicionar nova lista</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Google_auth_web_client_id">506787812008-lt189hk74uat00onsrcuivdcoduum8o0.apps.googleusercontent.com</string>
    <string name="Tentar_novamente">Tentar novamente</string>
    <string name="Vocenaoestaconectadoainternetouadata">Você não está conectado à internet ou a data do dispositivo está incorreta</string>
    <string name="Voce_cancelou_o_login">Você cancelou o login</string>
    <string name="Hamaisdeumprocessodeloginemandamentoquantas">Há mais de um processo de login em andamento. Quantas vezes você apertou esse botão?</string>
    <string name="Houveumerroaoautenticarsuacontatente">Houve um erro ao autenticar sua conta, tente novamente. Causa: {0}</string>
    <string name="BemvindoX">Bem-vindo(a) %1$s</string>
    <string name="Ologinfalhou">O login falhou. Código: %1$d \nMensagem: %2$s</string>
    <string name="Houveumerroaocontactaraapidogoole">Houve um erro ao contactar a API do Google, verifique sua conexão e tente reiniciar o app.  Código: {%1$d}</string>
    <string name="Foto_de_perfil_do_usuario">Foto de perfil do usuário</string>
    <string name="Bom_dia">Bom dia</string>
    <string name="Boa_tarde">Boa tarde</string>
    <string name="Boa_noite">Boa noite</string>
    <string name="Suas_listas">Suas listas</string>
    <string name="Adicionar_lista">Adicionar lista</string>
    <string name="Digite_o_nome_aqui">Digite o nome aqui</string>
    <string name="Remover">Remover</string>
    <string name="Renomear_lista">Renomear lista</string>
    <string name="Por_favor_confirme">Por favor, confirme:</string>
    <string name="Por_favor_aguarde">Por favor, aguarde…</string>
    <string name="Deseja_mesmo_remover_x">Deseja mesmo remover <b>%1$s</b>?</string>
    <string name="Deseja_mesmo_remover_x_das_sugestoes">Deseja mesmo remover <b>%1$s</b> das sugestões?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="un">%1$d UN</string>
    <string name="Editar_outros_atributos">Editar outros atributos</string>
    <string name="Digite_o_novo_preco">Digite o novo preço</string>
    <string name="Digite_a_nova_quantidade">Digite a nova quantidade</string>
    <string name="Salvar">Salvar</string>
    <string name="Insira_uma_quantidade_valida">Insira uma quantidade válida</string>
    <string name="Insira_um_preco_valido">Insira um preço válido</string>
    <string name="Pesquise_aqui">Pesquise aqui</string>
    <string name="Botao_para_adicionar_produtos_lista">Botão para adicionar produtos à lista</string>
    <string name="Valor_da_lista">Valor da lista</string>
    <string name="Valor_do_carrinho">Valor do carrinho</string>
    <string name="Alca_para_mudar_a_posicao_do_produto_na_lista">Alça para mudar a posição do produto na lista</string>
    <string name="Remover_lista">Remover lista</string>
    <string name="Ordenar_produtos">Ordenar produtos</string>
    <string name="Detalhes_Ex_marca_x_ou_y_500gr_1kg">Detalhes (Marca, peso)</string>
    <string name="Nome_do_produto_ex_macarrao_parafuso">Nome (Ex.: Macarrão Parafuso)</string>
    <string name="Valor_da_unidade">Valor da unidade</string>
    <string name="Quantidade_necessaria">Quantidade necessária</string>
    <string name="Sugerir_produto_ao_criar_nova_lista">Sugerir produto ao criar nova lista</string>
    <string name="Categoria">Categoria</string>
    <string name="Adicionar_produto">Adicionar produto</string>
    <string name="O_nome_nao_pode_ficar_vazio">O nome não pode ficar vazio</string>
    <string name="A_cor_nao_pode_ficar_vazia">A cor não pode ficar vazia</string>
    <string name="O_nome_deve_ter_no_m_nimo_x_caracteres" tools:ignore="PluralsCandidate">O nome deve ter no mínimo %1$d caracteres</string>
    <string name="O_nome_deve_ter_no_m_ximo_x_caracteres" tools:ignore="PluralsCandidate">O nome deve ter no máximo %1$d caracteres</string>
    <string name="Os_detalhes_devem_ter_ate_x_caracteres" tools:ignore="PluralsCandidate">Os detalhes devem ter no máximo %1$d caracteres</string>
    <string name="As_anotacoes_devem_ter_ate_x_caracteres" tools:ignore="PluralsCandidate">As anotações devem ter no máximo %1$d caracteres</string>
    <string name="Edicao_rapida">Edição rápida</string>
    <string name="Outras_opcoes">Outras opções</string>
    <string name="Remover_produto">Remover produto</string>
    <string name="Editar_produto">Editar produto</string>
    <string name="Editar_x">Editar %1$s</string>
    <string name="Fechar">Fechar</string>
    <string name="X_ja_existe_na_lista">%1$s já existe na lista</string>
    <string name="X_ja_existe">%1$s já existe</string>
    <string name="Nao_foi_possivel_verificar_se_x_ja_existe_na_lista">Não foi possível verificar se %1$s já existe na lista</string>
    <string name="Nao_foi_possivel_verificar_se_x_ja_existe">Não foi possível verificar se %1$s já existe</string>
    <string name="Salvar_produto">Salvar produto</string>
    <string name="Salvar_categoria">Salvar categoria</string>
    <string name="Data_de_criacao">Data de criação</string>
    <string name="Nome">Nome</string>
    <string name="Produtos_comprados_no_fim_da_lista">Produtos comprados no fim da lista</string>
    <string name="produtos_em_ordem_crescente">Produtos em ordem crescente</string>
    <string name="Selecione_uma_cor">Selecione uma cor</string>
    <string name="Nome_ex_massas_graos">Nome (Ex.: Massas, grãos)</string>
    <string name="Adicionar_categoria">Adicionar categoria</string>
    <string name="Selecionar_categoria">Selecionar categoria</string>
    <string name="Selecionar_cor">Selecionar cor</string>
    <string name="Cor_selecionada">Cor selecionada</string>
    <string name="Erro_ao_carregar_categorias_x">Erro ao carregar categorias %1$s</string>
    <string name="Selecione_uma_categoria">Selecione uma categoria</string>
    <string name="Nova_categoria">Nova categoria</string>
    <string name="Clique_aqui_para_alterar_a_cor">Clique aqui para alterar a cor</string>
    <string name="A_categoria_esta_em_uso_e_nao_pode_ser_removida">A categoria está em uso e não pode ser removida</string>
    <string name="Nao_foi_possivel_verificar_se_a_categoria_esta_em_uso">Não foi possível verificar se a categoria está em uso</string>
    <string name="Sugestao_de_produtos">Sugestão de produtos</string>
    <string name="Incluir_na_lista">Incluir na lista</string>
    <string name="Concluir">Concluir</string>
    <string name="Produtos_repetidos_x_nao_foram_incluidos_na_lista">Produtos repetidos (%1$d) não foram incluídos na lista</string>
    <string name="Voce_esta_pensando_em">Você está pensando em:</string>
    <string name="Usar_banco_de_dados_de_producao">Usar banco de dados de produção</string>
    <string name="Posicao">Posição</string>
    <string name="Como_ordenar_os_itens">Como ordenar os ítens</string>
    <string name="Gerenciar_categorias">Gerenciar categorias</string>
    <string name="Botao_para_adicionar_uma_nova_categoria">Botão para adicionar uma nova categoria</string>
    <string name="Todos_os_produtos_desta_categoria_foram_comprados">Todos os produtos desta categoria foram comprados</string>
    <string name="Compras_de_x">Compras de %1$s</string>
    <string name="Convide_usuarios_para_sua_conta">Convide usuários para sua conta</string>
    <string name="Sincronismo_de_dados">Sincronismo de dados</string>
    <string name="Seja_convidado_de_outro_usuario">Seja convidado de outro usuário</string>
    <string name="Sua_conta">Sua conta</string>
    <string name="Sair">Sair</string>
    <string name="Apagar_conta">Apagar conta</string>
    <string name="Gerencie_sua_conta">Gerencie sua conta</string>
    <string name="Sincronizar_dados_com_outra_conta">Sincronizar dados com outra conta</string>
    <string name="Colaboracao">Colaboração</string>
    <string name="Enviar_convite">Enviar convite</string>
    <string name="Digite_o_email_do_usuario">Digite o email do usuário</string>
    <string name="Solicitar_permissao">Solicitar permissão</string>
    <string name="Quando_o_seu_convite_for_aceito_os_dados">Quando o seu convite for aceito, os dados de ambas as contas serão mesclados e as alterações feitas por um usuário serão refletidas na conta do outro.</string>
    <string name="Colaborar_com_outro_usu_rio">Colaborar com outro usuário</string>
    <string name="Perfil">Perfil</string>
    <string name="Gerenciar_contas">Interromper sincronismo</string>
    <string name="Sincronize_com_outro_usu_rio">Sincronize dados com outro usuário</string>
    <string name="Colaborar_com_outr_usuario">Colaborar com outro usuário</string>
    <string name="Endereco_de_email_invalido">Endereço de email inválido</string>
    <string name="O_email_n_o_pode_ficar_em_branco">O email não pode ficar em branco</string>
    <string name="Insira_um_endere_o_v_lido">Insira um endereço válido</string>
    <string name="Solicita_o_enviada">Solicitação enviada</string>
    <string name="Entendi">Entendi</string>
    <string name="Voce_nao_pode_convidar_a_s_mesmo">Você não pode convidar a sí mesmo</string>
    <string name="Usu_rio_n_o_existe">Usuário não existe</string>
    <string name="Voce_sera_desconectado_a_e_todos_os_dados_locais_ser_o_removidos_deseja_mesmo_continuar">Você será desconectado(a) e todos os dados locais serão removidos, deseja mesmo continuar?</string>
    <string name="Erro_fazendo_logoff_tente_novamente_mais_tarde">Erro fazendo logoff, tente novamente mais tarde</string>
    <string name="Houve_um_erro_ao_enviar_a_solicitacao">Houve um erro ao enviar a solicitação, tente novamente mais tarde</string>
    <string name="Erro_ao_enviar_solicitacao">Erro ao enviar solicitação</string>
    <string name="Solicitacoes_recebidas">Solicitações recebidas</string>
    <string name="Editar_lista">Editar lista</string>
    <string name="Salvar_lista">Salvar lista</string>
    <string name="Gerenciar_solicitacao">Gerenciar solicitação</string>
    <string name="Recusar">Recusar</string>
    <string name="Aceitar">Aceitar</string>
    <string name="Solicita_o_aceita_com_sucesso_o_solicitante_deve_reiniciar_o_aplicativo">Solicitação aceita com sucesso.\n\nReinicie o app para aplicar as alterações</string>
    <string name="Nao_foi_poss_vel_aceitar_a_solicita_o_tente_novamente_mais_tarde">Não foi possível aceitar a solicitação, tente novamente mais tarde</string>
    <string name="solicita_o_aceita">Solicitação aceita</string>
    <string name="Erro_ao_aceitar_solicita_o">Erro ao aceitar solicitação</string>
    <string name="Erro_ao_recusar_solicita_o">Erro ao recusar solicitação</string>
    <string name="solicita_recusada">Solicitação recusada</string>
    <string name="Contas_sincronizando_com_voce">Usuários sincronizando com você</string>
    <string name="Voce_esta_sincronizando_seus_dados_com">Você está sincronizando seus dados com:</string>
    <string name="Voce_nao_pode_conectar_sua_conta_a_outra_enquanto">Você não pode conectar sua conta a outra enquanto houver outras contas conectadas à sua.\n\nInterrompa o sincronismo com as contas conectadas à sua antes de enviar uma solicitação a outro usuário.</string>
    <string name="Erro">Erro</string>
    <string name="Gerenciar_convidado">Gerenciar convidado</string>
    <string name="Interromper_conexao_entre">Interromper conexão entre contas</string>
    <string name="Interromper_conexao">Interromper conexão</string>
    <string name="Informacoes_adicionais">Informações adicionais</string>
    <string name="Inclua_detalhes_do_item_como_marca_ou_peso">Inclua detalhes do item como marca ou peso.</string>
    <string name="Comprar_e_salvar">Comprar e salvar</string>
</resources>