<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/iv_list_icon"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/back_list_icon"
                android:importantForAccessibility="no"
                android:padding="10dp"
                app:srcCompat="@drawable/vec_product"
                app:tint="?colorPrimary" />


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="@font/lexend_deca_bold"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/Editar_produto"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/ll_options" />

        <LinearLayout
            android:id="@+id/ll_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/fab_save">


            <TextView
                android:id="@+id/tv_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lexend_deca_bold"
                android:padding="16dp"
                android:text="@string/Edicao_rapida"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_price"
                style="@style/Margins_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/vec_price"
                android:hint="@string/Digite_o_novo_preco"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:selectAllOnFocus="true"
                android:theme="@style/Theme.EditText.Dialog" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_quantity"
                style="@style/Margins_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/vec_quantity"
                android:hint="@string/Digite_a_nova_quantidade"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="6"
                android:selectAllOnFocus="true"
                android:theme="@style/Theme.EditText.Dialog" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_info"
                style="@style/Margins_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:drawableStart="@drawable/vec_details"
                android:hint="@string/Detalhes_Ex_marca_x_ou_y_500gr_1kg"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLength="50"
                android:selectAllOnFocus="true"
                android:theme="@style/Theme.EditText.Dialog"
                tools:text="algum  texto  algum  texto  algum  texto  " />

            <LinearLayout
                android:id="@+id/ll_adittional_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/tv_title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lexend_deca_bold"
                    android:padding="16dp"
                    android:text="@string/Outras_opcoes"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_edit_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/back_textview_menu"
                    android:drawablePadding="16dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/Editar_outros_atributos"
                    android:textColor="?attr/colorPrimaryVariant"
                    app:drawableStartCompat="@drawable/vec_rename"
                    app:drawableTint="?attr/colorPrimaryVariant"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tv_remove"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_remove_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/back_textview_menu"
                    android:drawablePadding="16dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/Remover_produto"
                    android:textColor="?attr/colorPrimaryVariant"
                    app:drawableStartCompat="@drawable/vec_remove"
                    app:drawableTint="?attr/colorPrimaryVariant"
                    app:layout_constraintBottom_toTopOf="@id/tv_sort_products"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorSecondaryFixed"
            android:text="@string/Salvar"
            android:textColor="?colorOnSecondaryFixed"
            app:icon="@drawable/vec_check"
            app:iconTint="?attr/colorOnSecondaryFixed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fab_buy_and_save"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_buy_and_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/Comprar_e_salvar"
            android:textColor="?colorOnPrimary"
            app:icon="@drawable/vec_done_all"
            app:iconTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fab_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>