<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp">


        <ImageView
            android:id="@+id/iv_list_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/back_list_icon"
            android:importantForAccessibility="no"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toStartOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:srcCompat="@drawable/vec_product"
            app:tint="?colorPrimary" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:fontFamily="@font/lexend_deca_bold"
            android:padding="16dp"
            android:text="@string/Informacoes_adicionais"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/ll_options" />

        <LinearLayout
            android:id="@+id/ll_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:orientation="vertical"
            android:paddingTop="24dp"
            app:layout_constraintBottom_toTopOf="@id/fab_confirm">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_info"
                style="@style/Margins_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/vec_details"
                android:hint="@string/Detalhes_Ex_marca_x_ou_y_500gr_1kg"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLength="50"
                android:theme="@style/Theme.EditText.Dialog" />

            <TextView
                android:id="@+id/tv_info_error"
                style="@style/Margins_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:importantForAutofill="no"
                android:textColor="@color/error"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/vec_error"
                app:drawableTint="@color/error"
                tools:text="@string/Nome_do_produto_ex_macarrao_parafuso"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_info_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"

                android:text="@string/Inclua_detalhes_do_item_como_marca_ou_peso"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/Salvar"
            android:textColor="?colorOnPrimary"
            app:icon="@drawable/vec_check"
            app:iconTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>